--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -278,7 +280,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,32 +294,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We posit that Pokemons of type Dragon have, on average, more HP stats than Grass. Choose the propper test and, with 5% significance, comment your findings."
+    "- We posit that Pokemons of type Dragon have, on average, more HP stats than Grass. Choose the propper test and, with 5% significance, comment your findings.\n",
+    "\n",
+    "- H0: mean_hp_dragon > mean_hp_grass\n",
+    "- H1: mean_hp_dragon <= mean_hp_grass\n",
+    "\n",
+    "- significance level = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00010181538122353851"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#code here"
+    "df_dragon = df[(df['Type 1'] == 'Dragon') | (df['Type 2'] == 'Dragon')]['HP']\n",
+    "df_grass = df[(df['Type 1'] == 'Grass') | (df['Type 2'] == 'Grass')]['HP']\n",
+    "\n",
+    "alpha = 0.05\n",
+    "t_stat, p_value = st.ttest_ind(df_dragon, df_grass, equal_var=False)\n",
+    "\n",
+    "p_value\n",
+    "\n",
+    "# Because p_value is lower than significance level, we reject the null hypothesis, this means that Dragon Pokémon have significantly different \n",
+    "# HP than Grass Pokémon."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We posit that Legendary Pokemons have different stats (HP, Attack, Defense, Sp.Atk, Sp.Def, Speed) when comparing with Non-Legendary. Choose the propper test and, with 5% significance, comment your findings.\n"
+    "- We posit that Legendary Pokemons have different stats (HP, Attack, Defense, Sp.Atk, Sp.Def, Speed) when comparing with Non-Legendary. Choose the propper test and, with 5% significance, comment your findings.\n",
+    "\n",
+    "- HO: stats_leg != stats_non_leg\n",
+    "\n",
+    "- H1: stats_leg = stats_non_leg\n",
+    "\n",
+    "- significance level = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HP has p_value of 1.0026911708035284e-13\n",
+      "Attack has p_value of 2.520372449236646e-16\n",
+      "Defense has p_value of 4.8269984949193316e-11\n",
+      "Sp. Atk has p_value of 1.5514614112239812e-21\n",
+      "Sp. Def has p_value of 2.2949327864052826e-15\n",
+      "Speed has p_value of 1.049016311882451e-18\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "df_leg = df[df['Legendary']==True]\n",
+    "df_non_leg = df[df['Legendary']==False]\n",
+    "statistics = ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "alpha = 0.05\n",
+    "\n",
+    "for stat in statistics:\n",
+    "    t_stat, p_value = st.ttest_ind(df_leg[stat], df_non_leg[stat], equal_var=False)\n",
+    "    print(f'{stat} has p_value of {p_value}')\n",
+    "\n",
+    "# Because p_value is lower than significance level for all stats, we reject the null hypthesis, this means that Legendary Pokoments don't \n",
+    "# have different stats when comparing with Non-Legendary Prokemon. "
    ]
   },
   {
@@ -337,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +509,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,24 +539,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: 37.9923, P-value: 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "school_coords = (-118, 34)\n",
+    "hospital_coords = (-122, 37)\n",
+    "\n",
+    "def euclidean_distance(lon1, lat1, lon2, lat2):\n",
+    "    return np.sqrt((lat2 - lat1) ** 2 + (lon2 - lon1) ** 2)\n",
+    "\n",
+    "df['school_distance'] = df.apply(lambda row: euclidean_distance(school_coords[0], school_coords[1], row['longitude'], row['latitude']), axis=1)\n",
+    "df['hospital_distance'] = df.apply(lambda row: euclidean_distance(hospital_coords[0], hospital_coords[1], row['longitude'], row['latitude']), axis=1)\n",
+    "\n",
+    "close_to_school = df[df['school_distance'] < 0.5]\n",
+    "far_from_school = df[df['school_distance'] >= 0.5]\n",
+    "close_to_hospital = df[df['hospital_distance'] < 0.5]\n",
+    "far_from_hospital = df[df['hospital_distance'] >= 0.5]\n",
+    "\n",
+    "df['ctsoh'] = (df['school_distance'] < 0.5) | (df['hospital_distance'] < 0.5)\n",
+    "\n",
+    "close_houses = df[df['ctsoh']]['median_house_value']\n",
+    "far_houses = df[df['ctsoh'] == False]['median_house_value']\n",
+    "\n",
+    "t_stat, p_value = st.ttest_ind(close_houses, far_houses, alternative='greater', equal_var=False)\n",
+    "print(f'T-statistic: {t_stat:.4f}, P-value: {p_value:.4f}')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -512,9 +593,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
